--- a/Tray/src/main/res/layout/fragment_net_banking_bottom_sheet.xml
+++ b/Tray/src/main/res/layout/fragment_net_banking_bottom_sheet.xml
@@ -99,7 +99,8 @@
                         android:searchIcon="@drawable/searchicon"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="@+id/imageView"
-                        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+                        app:layout_constraintTop_toBottomOf="@+id/textView2"
+                        />
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/banksRecyclerView"
@@ -149,7 +150,7 @@
                                 app:srcCompat="@drawable/icici" />
 
                             <TextView
-                                android:id="@+id/textView22"
+                                android:id="@+id/popularWalletNameTextView"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="8dp"
