--- a/Tray/src/main/res/layout/fragment_add_u_p_i_i_d.xml
+++ b/Tray/src/main/res/layout/fragment_add_u_p_i_i_d.xml
@@ -125,19 +125,21 @@
                     app:layout_constraintStart_toStartOf="@+id/editTextText"
                     app:layout_constraintTop_toBottomOf="@+id/editTextText">
 
-                    <LinearLayout
+                    <androidx.constraintlayout.widget.ConstraintLayout
                         android:id="@+id/ll1InvalidUPI"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_weight="0.5"
-                        android:gravity="center_vertical"
-                        android:orientation="horizontal">
+                        android:layout_weight="0.5">
 
                         <ImageView
                             android:id="@+id/imageView5"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:src="@drawable/error_outline" />
+                            android:src="@drawable/error_outline"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="@+id/textView4"
+                            android:layout_marginBottom="2dp"/>
 
                         <TextView
                             android:id="@+id/textView4"
@@ -149,8 +151,11 @@
                             android:gravity="center"
                             android:text="Invalid UPI ID. Please check and retry.  "
                             android:textColor="#B9232F"
-                            android:textSize="12sp" />
-                    </LinearLayout>
+                            android:textSize="12sp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toEndOf="@+id/imageView5"
+                            app:layout_constraintTop_toTopOf="parent" />
+                    </androidx.constraintlayout.widget.ConstraintLayout>
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
