--- a/Tray/src/main/res/layout/fragment_add_u_p_i_i_d.xml
+++ b/Tray/src/main/res/layout/fragment_add_u_p_i_i_d.xml
@@ -156,7 +156,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginTop="8dp"
-                        android:layout_weight="0.5">
+                        android:layout_weight="0.5"
+                        android:visibility="gone">
 
                         <ImageView
                             android:id="@+id/imageView3"
