--- a/Tray/src/main/res/layout/fragment_main_bottom_sheet.xml
+++ b/Tray/src/main/res/layout/fragment_main_bottom_sheet.xml
@@ -114,7 +114,8 @@
                                 android:textColor="#010102"
                                 app:layout_constraintStart_toStartOf="@+id/textView9"
                                 app:layout_constraintTop_toBottomOf="@+id/textView9"
-                                app:layout_goneMarginBottom="16dp"/>
+                                app:layout_goneMarginBottom="16dp"
+                                tools:layout_goneMarginBottom="16dp" />
 
                             <TextView
                                 android:id="@+id/unopenedTotalValue"
@@ -143,6 +144,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="300dp"
                                 android:layout_marginStart="14dp"
+                                android:layout_marginTop="8dp"
                                 android:layout_marginEnd="14dp"
                                 android:visibility="visible"
                                 app:layout_constraintEnd_toEndOf="parent"
