--- a/Tray/src/main/res/layout/fragment_add_card_bottom_sheet.xml
+++ b/Tray/src/main/res/layout/fragment_add_card_bottom_sheet.xml
@@ -124,9 +124,9 @@
                             android:background="@drawable/edittext_bg"
                             android:fontFamily="@font/poppins"
                             android:gravity="center_vertical"
-                            android:hint="MM/YYYY"
+                            android:hint="MM/YY"
                             android:inputType="number"
-                            android:maxLength="6"
+                            android:maxLength="4"
                             android:paddingStart="12dp"
                             android:paddingTop="8dp"
                             android:paddingEnd="60dp"
@@ -191,7 +191,7 @@
                             android:gravity="center_vertical"
                             android:hint="Enter CVV"
                             android:inputType="numberPassword"
-                            android:maxLength="3"
+                            android:maxLength="4"
                             android:paddingStart="12dp"
                             android:paddingTop="8dp"
                             android:paddingEnd="60dp"
