--- a/Tray/src/main/res/layout/fragment_main_bottom_sheet.xml
+++ b/Tray/src/main/res/layout/fragment_main_bottom_sheet.xml
@@ -280,7 +280,7 @@
                                     app:layout_constraintBottom_toBottomOf="@+id/imageView8"
                                     app:layout_constraintEnd_toEndOf="parent"
                                     app:layout_constraintTop_toTopOf="@+id/imageView8"
-                                    app:srcCompat="@drawable/grey_color_arrow_down" />
+                                    app:srcCompat="@drawable/rightarrow" />
 
 
                             </androidx.constraintlayout.widget.ConstraintLayout>
