--- a/Tray/src/main/res/layout/fragment_wallet_bottom_sheet.xml
+++ b/Tray/src/main/res/layout/fragment_wallet_bottom_sheet.xml
@@ -141,13 +141,24 @@
                                     android:layout_marginEnd="16dp"
                                     android:id="@+id/popularWalletConstraintLayout1">
 
-                                    <ImageView
-                                        android:id="@+id/popularWalletImageView1"
+                                    <RelativeLayout
                                         android:layout_width="50dp"
                                         android:layout_height="50dp"
+                                        app:layout_constraintBottom_toBottomOf="parent"
                                         app:layout_constraintEnd_toEndOf="parent"
                                         app:layout_constraintStart_toStartOf="parent"
-                                        app:layout_constraintTop_toTopOf="parent" />
+                                        app:layout_constraintTop_toTopOf="parent"
+                                        android:background="@drawable/popular_item_unselected_bg">
+
+                                        <ImageView
+                                            android:id="@+id/popularWalletImageView1"
+                                            android:layout_width="wrap_content"
+                                            android:layout_height="wrap_content"
+                                            app:layout_constraintEnd_toEndOf="parent"
+                                            app:layout_constraintStart_toStartOf="parent"
+                                            app:layout_constraintTop_toTopOf="parent"
+                                            android:layout_centerInParent="true"/>
+                                    </RelativeLayout>
 
                                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -157,13 +168,24 @@
                                     android:layout_marginEnd="16dp"
                                     android:id="@+id/popularWalletConstraintLayout2">
 
-                                    <ImageView
-                                        android:id="@+id/popularWalletImageView2"
+                                    <RelativeLayout
                                         android:layout_width="50dp"
                                         android:layout_height="50dp"
+                                        app:layout_constraintBottom_toBottomOf="parent"
                                         app:layout_constraintEnd_toEndOf="parent"
                                         app:layout_constraintStart_toStartOf="parent"
-                                        app:layout_constraintTop_toTopOf="parent" />
+                                        app:layout_constraintTop_toTopOf="parent"
+                                        android:background="@drawable/popular_item_unselected_bg">
+
+                                        <ImageView
+                                            android:id="@+id/popularWalletImageView2"
+                                            android:layout_width="wrap_content"
+                                            android:layout_height="wrap_content"
+                                            app:layout_constraintEnd_toEndOf="parent"
+                                            app:layout_constraintStart_toStartOf="parent"
+                                            app:layout_constraintTop_toTopOf="parent"
+                                            android:layout_centerInParent="true"/>
+                                    </RelativeLayout>
 
                                 </androidx.constraintlayout.widget.ConstraintLayout>
                                 <androidx.constraintlayout.widget.ConstraintLayout
@@ -172,13 +194,24 @@
                                     android:layout_marginEnd="16dp"
                                     android:id="@+id/popularWalletConstraintLayout3">
 
-                                    <ImageView
-                                        android:id="@+id/popularWalletImageView3"
+                                    <RelativeLayout
                                         android:layout_width="50dp"
                                         android:layout_height="50dp"
+                                        app:layout_constraintBottom_toBottomOf="parent"
                                         app:layout_constraintEnd_toEndOf="parent"
                                         app:layout_constraintStart_toStartOf="parent"
-                                        app:layout_constraintTop_toTopOf="parent" />
+                                        app:layout_constraintTop_toTopOf="parent"
+                                        android:background="@drawable/popular_item_unselected_bg">
+
+                                        <ImageView
+                                            android:id="@+id/popularWalletImageView3"
+                                            android:layout_width="wrap_content"
+                                            android:layout_height="wrap_content"
+                                            app:layout_constraintEnd_toEndOf="parent"
+                                            app:layout_constraintStart_toStartOf="parent"
+                                            app:layout_constraintTop_toTopOf="parent"
+                                            android:layout_centerInParent="true"/>
+                                    </RelativeLayout>
 
                                 </androidx.constraintlayout.widget.ConstraintLayout>
                                 <androidx.constraintlayout.widget.ConstraintLayout
@@ -186,13 +219,22 @@
                                     android:layout_height="match_parent"
                                     android:layout_marginEnd="16dp"
                                     android:id="@+id/popularWalletConstraintLayout4">
-                                    <ImageView
-                                        android:id="@+id/popularWalletImageView4"
+                                    <RelativeLayout
                                         android:layout_width="50dp"
                                         android:layout_height="50dp"
+                                        app:layout_constraintBottom_toBottomOf="parent"
                                         app:layout_constraintEnd_toEndOf="parent"
                                         app:layout_constraintStart_toStartOf="parent"
-                                        app:layout_constraintTop_toTopOf="parent" />
+                                        app:layout_constraintTop_toTopOf="parent"
+                                        android:background="@drawable/popular_item_unselected_bg"
+                                        >
+
+                                        <ImageView
+                                            android:id="@+id/popularWalletImageView4"
+                                            android:layout_width="wrap_content"
+                                            android:layout_height="wrap_content"
+                                            android:layout_centerInParent="true"/>
+                                    </RelativeLayout>
 
                                 </androidx.constraintlayout.widget.ConstraintLayout>
 
