Changes in card Bottom Sheet

--- a/Tray/src/main/res/layout/fragment_add_card_bottom_sheet.xml
+++ b/Tray/src/main/res/layout/fragment_add_card_bottom_sheet.xml
@@ -135,18 +135,21 @@
                             android:textSize="14sp"
                             tools:ignore="TouchTargetSizeCheck" />
 
-                        <LinearLayout
+                        <androidx.constraintlayout.widget.ConstraintLayout
                             android:id="@+id/invalidCardValidity"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:gravity="center_vertical|top"
-                            android:orientation="horizontal">
+                            android:gravity="center_vertical|top">
 
                             <ImageView
                                 android:id="@+id/imageView6"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:src="@drawable/error_outline" />
+                                android:src="@drawable/error_outline"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="@+id/textView7"
+                                app:layout_constraintBottom_toBottomOf="@+id/textView7"
+                                android:layout_marginBottom="3dp"/>
 
                             <TextView
                                 android:id="@+id/textView7"
@@ -156,11 +159,14 @@
                                 android:enabled="false"
                                 android:fontFamily="@font/poppins"
                                 android:gravity="center_vertical|left"
-                                android:text="Invalid card validity.\nPlease check"
+                                android:text="Invalid card validity"
                                 android:textColor="#B9232F"
-                                android:textSize="12sp" />
+                                android:textSize="12sp"
+                                app:layout_constraintTop_toTopOf="parent"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintStart_toEndOf="@+id/imageView6"/>
 
-                        </LinearLayout>
+                        </androidx.constraintlayout.widget.ConstraintLayout>
                     </LinearLayout>
 
                     <LinearLayout
@@ -200,18 +206,21 @@
                             android:textSize="14sp"
                             tools:ignore="TouchTargetSizeCheck" />
 
-                        <LinearLayout
+                        <androidx.constraintlayout.widget.ConstraintLayout
                             android:id="@+id/invalidCVV"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:gravity="center_vertical|top"
-                            android:orientation="horizontal">
+                            android:gravity="center_vertical|top">
 
                             <ImageView
                                 android:id="@+id/imageView7"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:src="@drawable/error_outline" />
+                                android:src="@drawable/error_outline"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="@+id/textView8"
+                                app:layout_constraintBottom_toBottomOf="@+id/textView8"
+                                android:layout_marginBottom="3dp"/>
 
                             <TextView
                                 android:id="@+id/textView8"
@@ -223,9 +232,12 @@
                                 android:gravity="center"
                                 android:text="Invalid CVV"
                                 android:textColor="#B9232F"
-                                android:textSize="12sp" />
+                                android:textSize="12sp"
+                                app:layout_constraintStart_toEndOf="@+id/imageView7"
+                                app:layout_constraintTop_toTopOf="parent"
+                                app:layout_constraintBottom_toBottomOf="parent"/>
 
-                        </LinearLayout>
+                        </androidx.constraintlayout.widget.ConstraintLayout>
                     </LinearLayout>
 
 
@@ -356,20 +368,23 @@
 
                         </LinearLayout>
 
-                        <LinearLayout
+                        <androidx.constraintlayout.widget.ConstraintLayout
                             android:id="@+id/ll1InvalidCardNumber"
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginEnd="4dp"
                             android:gravity="center_vertical|top"
-                            android:orientation="horizontal"
-                            android:paddingStart="4dp">
+                            android:paddingStart="4dp"
+                            >
 
                             <ImageView
                                 android:id="@+id/imageView5"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:src="@drawable/error_outline" />
+                                android:src="@drawable/error_outline"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="@+id/textView4"
+                                app:layout_constraintBottom_toBottomOf="@+id/textView4"
+                                android:layout_marginBottom="3dp"/>
 
                             <TextView
                                 android:id="@+id/textView4"
@@ -379,11 +394,14 @@
                                 android:enabled="false"
                                 android:fontFamily="@font/poppins"
                                 android:gravity="center"
-                                android:text="Invalid Card Number. Please check and retry.  "
+                                android:text="Invalid Card Number"
                                 android:textColor="#B9232F"
-                                android:textSize="12sp" />
+                                android:textSize="12sp"
+                                app:layout_constraintStart_toEndOf="@+id/imageView5"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintTop_toTopOf="parent"/>
 
-                        </LinearLayout>
+                        </androidx.constraintlayout.widget.ConstraintLayout>
                     </LinearLayout>
 
 
