--- a/app/src/main/res/layout/activity_success_screen.xml
+++ b/app/src/main/res/layout/activity_success_screen.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="317dp"
         android:layout_marginEnd="181dp"
         android:layout_marginBottom="395dp"
-        android:text="SUCCESS"
+        android:text="SUCCESS of Merchant"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
